--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: orange;
   color: #fff;
   padding: 1rem;
   position: fixed;
