--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,19 @@ iframe {
   max-width: 100%;
 }
 
+header nav ul li a {
+  color: blue;
+  text-decoration: none;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f2f2f2;
+  padding: 10px;
+  text-align: center;
+}
+
+
