--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ nav li {
 
 main {
   margin-top: 4rem;
+    padding-bottom: 100px; /* Adjust as needed */
 }
 
 /* Add a bit of padding to the sections */
